2019-12-01  Daniel Shahaf  <danielsh@apache.org>

	* unposted: Completion/Unix/Command/_sqlite: Fix syntax error

2019-11-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 44958: Functions/VCS_Info/VCS_INFO_quilt, README: vcs_info
	quilt: Avoid forks

	* 44945: Functions/VCS_Info/Backends/VCS_INFO_detect_git:
	vcs_info git: Optimize detection by running fewer external
	commands.

2019-11-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 44948: Completion/Unix/Command/_subversion: Make
	_svn_controlled offer everything rather than nothing.

	* 44947: Completion/Unix/Command/_subversion: Complete the
	'auth', 'changelist', 'patch', 'resolve', and 'x-unshelve'
	subcommands.

	* 44946: Completion/Unix/Command/_subversion: Make _svn_conflicts
	not offer all files in the directory.

2019-11-26  Wayne Davison  <wayned@users.sourceforge.net>

	* 44912: Completion/Base/Completer/_expand: Don't set done_quote=1
	if the glob result is empty.  Fixes more cases of missing quotes.

2019-11-24  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 44923: Completion/Unix/Command/_git: update options for 2.24

	* 44896: Completion/Unix/Command/_make: use opt_args to find
	base directory and use it for $(CURDIR)

2019-11-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/24451: Src/compat.c: zgetcwd: Add a guard against
	returning an empty string.

	* unposted: Test/W01history.ztst: Add smoke test for :P history
	modifier.

2019-11-18  Peter Stephenson  <p.stephenson@samsung.com>

	* users/24445: Src/hist.c: Add missing support for :P to history
	code (was already present in glob qualifiers and variables).

2019-11-11  skirit  <skirit@dump.cz>

	* unposted (salsa.debian.org MR!1): Completion/Unix/Command/_ip:
	Complete the -brief option

2019-11-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 44904: Completion/Unix/Command/_subversion: Complete multiple
	comma-separated arguments to --show-item=<TAB>.

2019-11-08  Daniel Shahaf  <d.s@daniel.shahaf.name>
